LPS-141490 buildREST
https://issues.liferay.com/browse/LPS-141490
